--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - web</title>
+    <title>Jungle Challenge - Gerenciameno de Tarefas</title>
   </head>
   <body>
     <div id="app"></div>
